chore(community): sync local changes
